--- a/experimental/higepon/scheme-gc/Makefile.mona
+++ b/experimental/higepon/scheme-gc/Makefile.mona
@@ -6,13 +6,16 @@ INSTDIR = $(BINDIR)/SERVERS
 include Makefile.src.inc
 include Makefile.mona_gc.inc
 
-TARGET_LIBS = lib/MONA.SCM lib/DANNY.SCM lib/TEST.SCM
+TARGET_LIBS = lib/mona.scm lib/danny.scm #lib/test.scm
+TEST_FILES  = test/char.scm test/closure.scm test/continuation.scm test/generate.scm \
+              test/number.scm test/pair.scm test/port.scm test/string.scm test/symbol.scm \
+              test/test.scm test/util.scm test/vector.scm
 ADDCFLAGS    = $(GC_CFLAGS)
 CLEANFILES   = $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H) main.o $(TARGET_LIBS)
 ADDINCLUDE   = -I $(MONADIR)/include/monalibc -I .
 ADDLINK      =  main.o $(LIBCONT_OBJECTS)  $(GC_OBJECTS) -lmonalibc-imp --enable-auto-import
 ADDLINKDEP   =   $(LIBCONT_OBJECTS)  $(GC_OBJECTS) $(MONADIR)/lib/libmonalibc-imp.a main.o
-ADDTARGETDEP =  $(REGISTERS_INC) $(PROCEDURES_H) $(TARGET_LIBS) 
+ADDTARGETDEP =  $(REGISTERS_INC) $(PROCEDURES_H) $(TARGET_LIBS) test/test.scm
 
 GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
 include $(SHAREDIR)/configs/monapi-ex5.inc
@@ -20,11 +23,13 @@ include Makefile.dep.inc
 
 install:
 	mkdir -p $(INSTDIR)
+	$(INSTALL) -pd $(INSTDIR)/TEST
 	$(INSTALL) -p $(TARGET).EX5 $(INSTDIR)
+	$(INSTALL) -p  $(TEST_FILES) $(INSTDIR)/TEST
 	$(INSTALL) -p $(TARGET_LIBS) $(INSTDIR)
 
-.SUFFIXES: .SCM.in .SCM
-.SCM.in.SCM:
-	sed -e 's|<IF_MONA>||g' $< | sed -e 's|<LIBDIR>|/SERVERS|g' > $@
+.SUFFIXES: .scm.in .scm
+.scm.in.scm:
+	sed -e 's|<IF_MONA>||g' $< | sed -e 's|<LIBDIR>|/SERVERS|g' | sed -e 's|<TESTDIR>|/SERVERS/TEST|g' > $@
 
 -include dependencies
