--- a/experimental/higepon/scheme-gc/Makefile.mona
+++ b/experimental/higepon/scheme-gc/Makefile.mona
@@ -6,8 +6,8 @@ INSTDIR = $(BINDIR)/SERVERS
 include Makefile.src.inc
 include Makefile.mona_gc.inc
 
-TARGET_LIBS = lib/mona.scm lib/danny.scm #lib/test.scm
-TEST_FILES  = test/char.scm test/closure.scm test/continuation.scm test/generate.scm \
+TARGET_LIBS = lib/mona.scm lib/danny.scm lib/unittest.scm #lib/test.scm
+TEST_FILES  = test/char.scm test/closure.scm test/cont.scm test/generate.scm \
               test/number.scm test/pair.scm test/port.scm test/string.scm test/symbol.scm \
               test/test.scm test/util.scm test/vector.scm
 ADDCFLAGS    = $(GC_CFLAGS)
@@ -15,7 +15,7 @@ CLEANFILES   = $(LIBCONT_OBJECTS) $(GC_OBJECTS) $(REGISTERS_INC) $(PROCEDURES_H)
 ADDINCLUDE   = -I $(MONADIR)/include/monalibc -I .
 ADDLINK      =  main.o $(LIBCONT_OBJECTS)  $(GC_OBJECTS) -lmonalibc-imp --enable-auto-import
 ADDLINKDEP   =   $(LIBCONT_OBJECTS)  $(GC_OBJECTS) $(MONADIR)/lib/libmonalibc-imp.a main.o
-ADDTARGETDEP =  $(REGISTERS_INC) $(PROCEDURES_H) $(TARGET_LIBS) test/test.scm
+ADDTARGETDEP =  $(REGISTERS_INC) $(PROCEDURES_H) $(TARGET_LIBS) test/test.scm test/port.scm
 
 GC_OBJECTS = $(GC_SOURCES:.cpp=.o)
 include $(SHAREDIR)/configs/monapi-ex5.inc
@@ -30,6 +30,6 @@ install:
 
 .SUFFIXES: .scm.in .scm
 .scm.in.scm:
-	sed -e 's|<IF_MONA>||g' $< | sed -e 's|<LIBDIR>|/SERVERS|g' | sed -e 's|<TESTDIR>|/SERVERS/TEST|g' > $@
+	sed -e 's|<IF_MONA>||g' $< | sed -e 's|<IF_LINUX>|/;|g' | sed -e 's|<LIBDIR>|/SERVERS|g' | sed -e 's|<TESTDIR>|/SERVERS/TEST|g' > $@
 
 -include dependencies
